changed ice cream to english

--- a/responsividade/space-cream-desktop/style.css
+++ b/responsividade/space-cream-desktop/style.css
@@ -78,7 +78,7 @@
         position: relative;
     }
     
-    .grup-card {
+    .group-card {
         height: auto;
         ;
         display: grid;
