--- a/NLW/produtos/style.css
+++ b/NLW/produtos/style.css
@@ -59,7 +59,7 @@ body {
     flex-direction: column;
     gap: 2rem;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .information {
